--- a/csatlakozz.html
+++ b/csatlakozz.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="kepek/icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="kepek/icon/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
-    <title>Aphrodite</title>
-       <script src="jquery-3.7.1.js"></script>
+    <script src="jquery-3.7.1.js"></script>
     <script src="jquery-validation-1.19.5/dist/jquery.validate.min.js"></script>
     <script>
         $(document).ready(function () {
@@ -66,6 +65,9 @@
             });
         });
     </script>
+
+
+    <title>Aphrodite</title>
 </head>
 
 <body>
@@ -88,7 +90,7 @@
     </div>
 
     <div class="container">
-        <form action="http://szamtud.uni-corvinus.hu/receive.php" method="post">
+        <form action="http://szamtud.uni-corvinus.hu/receive.php" method="post" id="myform" novalidate >
             <article class="jelentkezes">
                 <h3>Jelentkezz online</h3>
                 <p>A leggyorsabb és legkönnyebb módja, hogy csatlakozz hozzánk az az alábbi jelentkezési ív kitöltése.
@@ -98,46 +100,49 @@
                 <article class="szemelyes">
                     <h3>Személyes információk</h3>
                     <p><label for="vnev">Vezetéknév:</label></p>
-                    <input type="text" name="vnev" class="doboz" id="vnev" required>
+                    <input type="text" name="vnev" class="doboz" id="vnev">
                     <p><label for="knev">Keresztnév:</label></p>
-                    <input type="text" name="knev" class="doboz" id="knev" required>
+                    <input type="text" name="knev" class="doboz" id="knev">
                     <p><label for="email">Email cím:</label></p>
-                    <input type="email" name="email" class="doboz" id="email" required>
+                    <input type="email" name="email" class="doboz" id="email">
                     <p><label for="szulido">Születési idő:</label></p>
-                    <input type="date" name="szulido" class="doboz" id="szulido" required>
+                    <input type="date" name="szulido" class="doboz" id="szulido">
                     <p><label for="lakhely">Lakhely:</label></p>
-                    <input type="text" name="lakhely" class="doboz" id="lakhely" required>
+                    <input type="text" name="lakhely" class="doboz" id="lakhely">
                     <p><label for="telszam">Telefonszám:</label></p>
-                    <input type="tel" name="telszam" class="doboz" id="telszam" required>
+                    <input type="tel" name="telszam" class="doboz" id="telszam">
                     <p><label for="insta">Instagram:</label></p>
-                    <input type="text" name="insta" class="doboz" id="insta" required>
+                    <input type="text" name="insta" class="doboz" id="insta">
                 </article>
                 <article class="szemelyes">
                     <h3>Külső tulajdonságok</h3>
                     <p><label for="magas">Magasság:</label></p>
-                    <input type="number" name="magas" class="doboz" id="magas" required>
+                    <input type="number" name="magas" class="doboz" id="magas">
                     <p><label for="suly">Testsúly:</label></p>
-                    <input type="number" name="suly" class="doboz" id="suly" required>
+                    <input type="number" name="suly" class="doboz" id="suly" >
                     <p><label for="derek">Derékméret:</label></p>
-                    <input type="number" name="derek" class="doboz" id="derek" required>
+                    <input type="number" name="derek" class="doboz" id="derek">
                     <p><label for="hajszin">Hajszín:</label></p>
                     <input type="color" name="hajszin" class="doboz" id="hajszin">
                     <p><label for="szemszin">Szemszín:</label></p>
                     <input type="color" name="szemszin" class="doboz" id="szemszin">
                     <p><label for="labm">Lábméret:</label></p>
-                    <input type="number" name="labm" class="doboz" id="labm" required>
+                    <input type="number" name="labm" class="doboz" id="labm" >
                 </article>
                 <article class="szemelyes">
                     <h3>Belső tulajdonságok</h3>
                     <p><label for="magabiztos">Magabiztosság:</label></p>
-                    <input type="range" name="magabiztos" min="1" max="10" step="1" value="5" class="doboz" id="magabiztos">
+                    <input type="range" name="magabiztos" id="magabiztos" min="1" max="10" step="1" value="5"
+                        class="doboz">
                     <p><label for="kitart">Kitartás:</label></p>
-                    <input type="range" name="kitart" min="1" max="10" step="1" value="5" class="doboz" id="kitart">
+                    <input type="range" name="kitart" id="kitart" min="1" max="10" step="1" value="5" class="doboz"
+                >
                     <p><label for="rugalmas">Rugalmasság:</label></p>
-                    <input type="range" name="rugalmas" min="1" max="10" step="1" value="5" class="doboz" id="rugalmas">
+                    <input type="range" name="rugalmas" id="rugalmas" min="1" max="10" step="1" value="5" class="doboz"
+                      >
                     <p><label for="te">Ki is vagy te?</label></p>
-                    <textarea name="te" class="doboz"
-                        placeholder="Pár mondatban fogalmazd meg, ki is vagy te valójában!" id="te"></textarea>
+                    <textarea name="te" class="doboz" id="te"
+                        placeholder="Pár mondatban fogalmazd meg, ki is vagy te valójában!"></textarea>
                     <p>
                     <p><label for="kep">Tölts fel egy képet magadról:</label></p>
                     <input type="file" name="kep" id="kep">
@@ -150,18 +155,24 @@
                         <option value="egyeb">Egyéb</option>
                     </select>
                 </article>
-                <p><label>Elolvastam és elfogadtam azt, ami az Adatvédelmi nyilatkozatban van. <input type="checkbox" name="adatvedelem" value="igen" required></label></p>
-                <p><input type="submit" class="csatgomb" value="Adatok elküldés" name="kuld"> <input type="reset" class="csatgomb" value="Törlés" name="Torol"></p>
+                <p><label for="adatvedelem">Elolvastam és elfogadtam azt, ami az Adatvédelmi nyilatkozatban van. <input type="checkbox"
+                            name="adatvedelem" id="adatvedelem" value="igen"></label></p>
+                <p><input type="submit" class="csatgomb" value="Adatok elküldés" name="kuld" id="kuld"> <input
+                        type="reset" class="csatgomb" value="Törlés" name="Torol"></p>
             </article>
         </form>
     </div>
     <hr>
     <footer>
         <article class="also_gombok">
-            <a class="gomb" href="https://www.instagram.com"><h2>Közösségi oldalaink</h2></a>
+            <a class="gomb" href="https://www.instagram.com">
+                <h2>Közösségi oldalaink</h2>
+            </a>
         </article>
         <article class="also_gombok">
-            <a href="#fent" class="gomb"><h2>Ugorj az oldal elejére</h2></a>
+            <a href="#fent" class="gomb">
+                <h2>Ugorj az oldal elejére</h2>
+            </a>
         </article>
         <p>© Készítette: Deli Mercédesz - Budapesti Corvinus Egyetem, 2023</p>
     </footer>
