--- a/csatlakozz.html
+++ b/csatlakozz.html
@@ -65,6 +65,12 @@
             });
         });
     </script>
+    <style>
+        label.error
+        {
+        color: #FB3A3A;
+        }
+    </style>
 
 
     <title>Aphrodite</title>
