--- a/szolgaltatasok.html
+++ b/szolgaltatasok.html
@@ -41,7 +41,7 @@
                     <label for="ferfi">Férfi <input type="radio" name="nem" id="ferfi"></label>
                 </p>
                 <hr>
-                <label for="ido"><h3>Mennyi időre szeretnéd igénybe venni a szolgáltatást? (óra)</h3></label>
+                <h3><label for="ido">Mennyi időre szeretnéd igénybe venni a szolgáltatást? (óra)</label></h3>
                 <p><input type="number" min="0" max="24" id="ido" name="ido"></p>
                 <hr>
                 <h3>Hétvégén szeretnéd igénybe venni a szolgáltatásunkat?</h3>
